--- a/src/output.css
+++ b/src/output.css
@@ -566,6 +566,10 @@ video {
   bottom: 11rem;
 }
 
+.left-20 {
+  left: 5rem;
+}
+
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -606,6 +610,16 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mx-20 {
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -630,6 +644,10 @@ video {
   margin-top: 5rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -640,6 +658,26 @@ video {
 
 .h-\[80vh\] {
   height: 80vh;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-0 {
+  height: 0px;
+}
+
+.h-0\.5 {
+  height: 0.125rem;
 }
 
 .w-64 {
@@ -654,6 +692,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-grow {
+  flex-grow: 1;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -664,6 +706,14 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -698,8 +748,24 @@ video {
   gap: 2rem;
 }
 
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-96 {
+  gap: 24rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -744,6 +810,16 @@ video {
 .bg-yellow-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(133 77 14 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -811,12 +887,21 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pl-20 {
   padding-left: 5rem;
 }
 
 .pl-40 {
   padding-left: 10rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .text-2xl {
@@ -861,10 +946,22 @@ video {
   color: rgb(133 77 14 / var(--tw-text-opacity));
 }
 
+.text-\[rounded-full\] {
+  color: rounded-full;
+}
+
 .underline {
   text-decoration-line: underline;
 }
 
 .opacity-70 {
   opacity: 0.7;
+}
+
+.opacity-35 {
+  opacity: 0.35;
+}
+
+.opacity-75 {
+  opacity: 0.75;
 }
