--- a/src/output.css
+++ b/src/output.css
@@ -570,6 +570,22 @@ video {
   left: 5rem;
 }
 
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.m-auto {
+  margin: auto;
+}
+
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -620,6 +636,31 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mx-72 {
+  margin-left: 18rem;
+  margin-right: 18rem;
+}
+
+.my-48 {
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+}
+
+.my-24 {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
+
+.mx-60 {
+  margin-left: 15rem;
+  margin-right: 15rem;
+}
+
+.mx-96 {
+  margin-left: 24rem;
+  margin-right: 24rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -646,6 +687,26 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mr-96 {
+  margin-right: 24rem;
+}
+
+.mr-60 {
+  margin-right: 15rem;
+}
+
+.ml-28 {
+  margin-left: 7rem;
+}
+
+.ml-32 {
+  margin-left: 8rem;
+}
+
+.-mr-60 {
+  margin-right: -15rem;
 }
 
 .flex {
@@ -680,12 +741,80 @@ video {
   height: 0.125rem;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
 .w-64 {
   width: 16rem;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
+.w-\[px\] {
+  width: px;
+}
+
+.w-\[40vhpx\] {
+  width: 40vhpx;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 
 .flex-1 {
@@ -758,6 +887,10 @@ video {
 
 .gap-20 {
   gap: 5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .rounded-full {
@@ -892,6 +1025,11 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .pl-20 {
   padding-left: 5rem;
 }
@@ -912,6 +1050,14 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[60px\] {
+  font-size: 60px;
 }
 
 .font-bold {
@@ -948,6 +1094,14 @@ video {
 
 .text-\[rounded-full\] {
   color: rounded-full;
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[60\] {
+  color: 60;
 }
 
 .underline {
